feat: connect db - create user
