# controllers/product_controller.go
@@ -22,3 +22,25 @@ func GetProducts(c *fiber.Ctx) error {
 	}
 	return c.JSON(products)
 }
+
+// PostProduct creates a new product
+// @Summary Create a new product
+// @Description Creates a new product with the provided details
+// @Tags Products
+// @Accept json
+// @Produce json
+// @Param product body models.Product true "Product details"
+// @Router /api/v1/products [post]
+func PostProduct(c* fiber.Ctx) error {
+	var product models.Product
+	if err := c.BodyParser((&product)); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "Invalid input",
+		})
+	}
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+		"message": "Product created successfully",
+		"product": product,
+	})
+}
+
