# models/users_model.go
@@ -1,0 +1,11 @@
+package models
+
+import "github.com/google/uuid"
+
+type User struct {
+	ID        uuid.UUID `json:"id" gorm:"type:uuid;default:uuid_generate_v4();primaryKey"`
+	Username string `json:"username" gorm:"unique;not null"`
+	Password string `json:"password" gorm:"not null"`
+	Email    string `json:"email" gorm:"unique;not null"`
+	Role     string `json:"role" gorm:"default:'user'"`
+}
